Bug 425157 - Apps moved to the corners by "Window Aperture" show desktop animation are visible on lockscreen
Summary: Apps moved to the corners by "Window Aperture" show desktop animation are vis...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.19.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 431527 435691 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-09 11:34 UTC by Mark Smith
Modified: 2021-06-01 14:03 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Smith 2020-08-09 11:34:24 UTC
SUMMARY
Use the Window Aperture effect to show the desktop, then lock the screen by keyboard shortcut. The corners of windows that were moved to the corners by the Window Aperture effect will show up on the lockscreen. 

STEPS TO REPRODUCE
1. Show desktop by using the Window Aperture effect
2. Lock the screen with a keyboard shortcut (ie Winkey + L) 
3. Look at the corners of your Window displayed on the lockscreen as well

SOFTWARE/OS VERSIONS
SOFTWARE/OS VERSIONS
OS: KDE neon 5.19
Kernel: x86_64 Linux 5.3.0-51-generic
Uptime: 14m
Packages: 2157
Shell: bash 4.4.20
Resolution: 1680x1050
DE: KDE 5.72.0 / Plasma 5.19.4
WM: KWin
GTK Theme: Breeze-Dark [GTK2/3]
Icon Theme: breeze-dark
Comment 1 Bug Janitor Service 2020-08-10 09:34:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/176
Comment 2 David Redondo 2020-08-10 11:42:02 UTC
Git commit 2a9971fa080876c21332049a0b249c43cc9764c9 by David Redondo.
Committed on 10/08/2020 at 09:34.
Pushed by davidre into branch 'master'.

Disable AnimationEffects when the screen is locked

M  +1    -1    libkwineffects/kwinanimationeffect.cpp

https://invent.kde.org/plasma/kwin/commit/2a9971fa080876c21332049a0b249c43cc9764c9
Comment 3 Nate Graham 2021-01-19 17:15:19 UTC
*** Bug 431527 has been marked as a duplicate of this bug. ***
Comment 4 David Redondo 2021-01-20 14:03:30 UTC
I can reproduce it again
Comment 5 David Redondo 2021-01-20 14:30:59 UTC
Hmm nevermind, after restarting KWin I actually can't
Comment 6 Nicolas Fella 2021-01-20 17:37:17 UTC
I can reproduce this on current master
Comment 7 toluschr 2021-01-30 16:50:57 UTC
Can reproduce
Comment 8 toluschr 2021-01-30 16:51:51 UTC
(In reply to toluschr from comment #7)
> Can reproduce

(on 5.20.5)
Comment 9 Nate Graham 2021-04-19 16:00:31 UTC
*** Bug 435691 has been marked as a duplicate of this bug. ***
Comment 10 Matty R 2021-05-31 11:28:55 UTC
Just discovered that i'm getting this issue also. 

Operating System: Arch Linux
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Kernel Version: 5.12.5-zen1-1-zen
OS Type: 64-bit
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 5800X 8-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2
Comment 11 Nate Graham 2021-06-01 14:03:41 UTC
This has been effectively fixed  in Plasma 5.22 by reducing the opacity to 0 for the windows in the corner. So even if the underlying problem remains, it will no longer ever manifest in a visual problem.