Disable AnimationEffects when the screen is locked

BUG:425157