libkwineffects/kwinanimationeffect.cpp
@@ -78,7 +78,7 @@ void AnimationEffect::init()
 bool AnimationEffect::isActive() const
 {
     Q_D(const AnimationEffect);
-    return !d->m_animations.isEmpty();
+    return !d->m_animations.isEmpty() && !effects->isScreenLocked();
 }
 
 
